tests/invalid/syntax_err_too_many_for_clauses.c
int main() {
    for (;;;)
        3;
    return 0;
}
// ERROR: Line 2, Error 2009